T-6399 category: Fixed vertical alignment of categories
Reviewed-on: https://review.totaralms.com/852
Tested-by: Totara Hudson <totara-hudson@catalyst.net.nz>

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -5915,6 +5915,10 @@ ul.course-subcat-listing li.more {
     font-size: 100%;
 }
 
+table.categorylisting td {
+    vertical-align: top;
+}
+
 /*
  * Full width class that can be applied to elements
  */
